# programming-challenges-skiena

./: .gitignore  .ycm_extra_conf.py  Makefile  README.md  build.sh  lcd_display.c  minesweeper.c  study-guide.md  the_trip  the_trip.c  the_trip_expected_output  three_n_plus_one.c
check_the_check/: check_the_check.c
graphical_editor/: graphical_editor.c  graphical_editor_test_case_uva
interpreter/: interpreter.c
kattis/: all_problems  get_problem_list.cpp
kattis/anagram-counting/: anagram_counting.cpp
kattis/identifying-map-tiles/: identifying_map_tiles.cpp
kattis/pebble-solitaire/: pebble_solitaire.cpp
kattis/planina/: planina.cpp
kattis/prva/: prva.cpp
skiena-algo-design-manual/ch3/balanced-parentheses-3-1/: balanced_parentheses.ans  balanced_parentheses.cpp  balanced_parentheses.in  homegrown_stack.cpp  homegrown_stack.hpp  meson.build  meson_options.txt  std_stack.cpp  std_stack.hpp
slre/: slre.c
the_trip/: the_trip_test_cases
uva/: Makefile
uva/graphical_editor/: graphical_editor_actual_output  graphical_editor_test_case_uva
uva/three_n_plus_one/: three_n_plus_one.c
